--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Hello this is our first file</h1>
-    <h2>halabsa</h2>
+    <h2>This line of code was added using github ui</h2>
 </body>
 
 </html>
